--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,6 +1,9 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'dashboard' %}" >Logo</a>
+{% load static %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light" > <!--style= "background-color:#112031"-->
+    <a class="navbar-brand" href="{% url 'dashboard' %}" >
+        <img src=" {% static 'img/logo.png' %}" alt="Logo"> 
+    </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
